[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenvia"
version = "0.1.2"
description = "3-tier AI governance SDK for autonomous agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Agenvia", email = "sdk@agenvia.io" }]
requires-python = ">=3.10"
keywords = ["ai", "governance", "llm", "agents", "security", "pii", "federated-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://agenvia.io"
Documentation = "https://docs.agenvia.io"
Repository = "https://github.com/agenvia/agenvia-python"
"Bug Tracker" = "https://github.com/agenvia/agenvia-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agenvia*"]

[tool.setuptools.package-data]
agenvia = ["py.typed"]

[tool.mypy]
strict = true
pretty = true

[tool.ruff]
line-length = 100
target-version = "py310"
